# rehab_1dof

./: 7.csv  README.md
rehab_1dof_control/: package.xml  setup.cfg  setup.py
rehab_1dof_control/rehab_1dof_control/: rehab_control_4waypoint.py
rehab_1dof_control/test/: Do_exercise.py  GUI_teachingROBOT.py  Robot_follow_teaching_GUI.py  add_force.py  plt_angle_joint.py  plt_ee3d.py  print_ee_pos.py  teach_exercise.py  tempCodeRunnerFile.py  test.py  test_trajetory-v2.py
rehab_1dof_description/: CMakeLists.txt  package.xml
rehab_1dof_description/config/: joint_names_rehab_robot_description.yaml
rehab_1dof_description/meshes/: arm_link.STL  base_link.STL  hand_link.STL
rehab_1dof_description/urdf/: rehab_1dof_description.csv  rehab_1dof_description.urdf
rehab_1dof_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
rehab_1dof_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  rehab_1dof_description.ros2_control.xacro  rehab_1dof_description.srdf  rehab_1dof_description.urdf.xacro  ros2_controllers.yaml
rehab_1dof_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rehab_1dof_moveit_gazebo.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
